Restructured built-in layouts, added syntax-highlighting fixes

--- a/lib/gmd/templates/layouts/github/layout.html.erb
+++ b/lib/gmd/templates/layouts/github/layout.html.erb
@@ -2,14 +2,10 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <%= Gmd.layout_meta_tags %>
-<script type="text/javascript"><%= File.read(File.dirname(__FILE__) + "/../common/highlight_js/highlight.pack.js") %></script>
-<style><%= File.read(File.dirname(__FILE__) + "/../common/highlight_js/github.css") %></style>
+<%= Gmd.load_common(:header) %>
 <style>
 <%= File.read(File.dirname(__FILE__) + "/style.css") %>
 </style>
-</script>
-<script type="text/javascript">
-hljs.initHighlightingOnLoad();
 </script>
 </head>
 <body>
