--- a/lib/gmd/templates/layouts/metal/layout.html.erb
+++ b/lib/gmd/templates/layouts/metal/layout.html.erb
@@ -2,8 +2,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <%= Gmd.layout_meta_tags %>
-<script type="text/javascript"><%= File.read(File.dirname(__FILE__) + "/../common/highlight_js/highlight.pack.js") %></script>
-<style><%= File.read(File.dirname(__FILE__) + "/../common/highlight_js/github.css") %></style>
+<%= Gmd.load_common(:header) %>
 <style>
 body {background-color:#f8f8f8;font-family:Helvetica;}
 h1,h2,h3,h4,h5,h6{border:0;}
@@ -30,9 +29,6 @@ a:hover{text-decoration:underline;}
 a code,a:link code,a:visited code{color:#4183c4;}
 img{max-width:100%;}
 </style>
-<script type="text/javascript">
-hljs.initHighlightingOnLoad();
-</script>
 </head>
 <body>
 <%= yield %>
