--- a/lib/gmd/templates/common/header.html.erb
+++ b/lib/gmd/templates/common/header.html.erb
@@ -12,3 +12,25 @@ $(document).ready(function() {
   });
 });
 </script>
+
+<%# MathJax %>
+<script type="text/x-mathjax-config">
+MathJax.Hub.Config({
+  jax: ["input/TeX","output/HTML-CSS"],
+  extensions: ["tex2jax.js"],
+  tex2jax: {
+    element: null,
+    inlineMath: [
+      ['$','$']
+    ],
+    displayMath: [
+      ['$$','$$']
+    ],
+    skipTags: ["script","noscript","style","textarea","pre","code"],
+    processEscapes: false,
+    processEnvironments: true,
+    preview: "TeX"
+  }
+});
+</script>
+<script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js"></script>
