Now use Tilt everywhere, fixed Redcarpet 2 with Tilt, added Helpers

--- a/lib/gmd/templates/common/header.html.erb
+++ b/lib/gmd/templates/common/header.html.erb
@@ -14,7 +14,7 @@ $(document).ready(function() {
 </script>
 
 <%# MathJax %>
-<% if locals[:options][:use_tex] %>
+<% if var[:options][:use_tex] %>
 	<script type="text/x-mathjax-config">
 	MathJax.Hub.Config({
 	  jax: ["input/TeX","output/HTML-CSS"],
