--- a/lib/gmd/templates/layouts/default/layout.html.erb
+++ b/lib/gmd/templates/layouts/default/layout.html.erb
@@ -1,8 +1,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<%= Gmd.layout_meta_tags %>
-<%= Gmd.load_common(:header) %>
+<%= layout_meta_tags %>
+<%= load_common(:header) %>
 <style>
 /*
 Some simple Github-like styles.
