--- a/lib/gmd/templates/layouts/metal/layout.html.erb
+++ b/lib/gmd/templates/layouts/metal/layout.html.erb
@@ -1,8 +1,8 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<%= Gmd.layout_meta_tags %>
-<%= Gmd.load_common(:header) %>
+<%= layout_meta_tags %>
+<%= load_common(:header) %>
 <style>
 body {background-color:#f8f8f8;font-family:Helvetica;}
 h1,h2,h3,h4,h5,h6{border:0;}
